...
            AWSServiceManager.default().defaultServiceConfiguration = configuration
        }

        let dataManager = createDataManager()

        #if DEBUG
            if "true" == ProcessInfo.processInfo.environment["-isUITest"] {
                dataManager.reset()
            }
        #else
            // Download JSON and update bus lines and fare info if needed
            dataManager.downloadNewFares(completionHandler: nil)
        #endif
...
